Finished integrating everything together.

--- a/website/WEB-INF/web.xml
+++ b/website/WEB-INF/web.xml
@@ -35,6 +35,17 @@
     <url-pattern>/fetch_data/*</url-pattern>
   </servlet-mapping>
   
+ <!-- <error-page>
+  	<error-code>404</error-code>
+  	<location>/WEB-INF/hiddenjsp/404.jsp</location>
+  </error-page>
+  	
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/WEB-INF/hiddenjsp/404.jsp</location>
+  </error-page>
+ --> 	
+  	
   <welcome-file-list>
     <welcome-file>register</welcome-file>
   </welcome-file-list>
