Fixed web.xml for 404 pages.

--- a/website/WEB-INF/web.xml
+++ b/website/WEB-INF/web.xml
@@ -35,7 +35,7 @@
     <url-pattern>/fetch_data/*</url-pattern>
   </servlet-mapping>
   
- <!-- <error-page>
+  <error-page>
   	<error-code>404</error-code>
   	<location>/WEB-INF/hiddenjsp/404.jsp</location>
   </error-page>
@@ -43,8 +43,7 @@
   <error-page>
   	<error-code>500</error-code>
   	<location>/WEB-INF/hiddenjsp/404.jsp</location>
-  </error-page>
- --> 	
+  </error-page>	
   	
   <welcome-file-list>
     <welcome-file>register</welcome-file>
